# mentorshipirity

./: CMakeLists.txt  node.cpp
src/: node.cpp  node.h
